...
            "state": "translated",
            "value": "外观"
          }
        }
      }
    },
    "Attach": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "附加"
          }
...
            "state": "translated",
            "value": "无法连接到你的 Mac"
          }
        }
      }
    },
    "Cancel": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "取消"
          }
...
            "state": "translated",
            "value": "更改"
          }
        }
      }
    },
    "Chats": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "聊天"
          }
...
            "state": "translated",
            "value": "将正在运行的任务移至后台"
          }
        }
      }
    },
    "Name": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "名称"
          }
...
            "state": "translated",
            "value": "粘贴你的密钥。它将保存在本机的钥匙串中。"
          }
        }
      }
    },
    "Photos": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "照片"
          }
...
            "state": "translated",
            "value": "隐私政策"
          }
        }
      }
    },
    "Projects": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "项目"
          }
...
            "state": "translated",
            "value": "正在通过配套连接接入你的 Mac。"
          }
        }
      }
    },
    "Recent Activity": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "最近活动"
          }
...
            "state": "translated",
            "value": "存储"
          }
        }
      }
    },
    "Scan QR Code": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "扫描二维码"
          }
...
            "state": "translated",
            "value": "发送给 Agent"
          }
        }
      }
    },
    "Settings": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "设置"
          }
...
            "state": "translated",
            "value": "部分文件已跳过"
          }
        }
      }
    },
    "Sort": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "排序"
          }
...
            "state": "translated",
            "value": "终端键盘"
          }
        }
      }
    },
    "Terminals": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "终端"
          }
...
